# claude-agent-framework

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  manifest.yaml  pyproject.toml
.claude/: session_state.md
agents/: audit.md  ba.md  back.md  backend-coding-agent.md  business-analyst.md  code-review-agent.md  coding-agent.md  compliance-verifier.md  design.md  devops-governor.md  front.md  frontend-coding-agent.md  init.md  lessons-advisor.md  lessons.md  ops.md  persona-evaluator.md  persona.md  project-initializer.md  qa-reviewer.md  qa.md  review.md  solution-designer.md  visit.md  visiting-agent-template.md
archive/pre-unification-2026-02-03/: ARCHIVE_MANIFEST.md  dotfiles-info.txt  prompts-repo-info.txt
cli/: README.md  pyproject.toml
cli/claude_cli/: __init__.py  __main__.py  main.py
cli/claude_cli/agents/: __init__.py  cli.py
cli/claude_cli/common/: __init__.py  config.py
cli/claude_cli/db/: __init__.py  audit.py  cli.py  masking.py
cli/claude_cli/lessons/: __init__.py  db.py  models.py
cli/claude_cli/worktree/: __init__.py  cli.py
cli/data/: .gitkeep
commands/: broken-arrow.md  docker-test.md  gates.md  learn.md  lost-lamb.md  qa.md  resume-state.md  review-project.md  save-state.md  visit.md
config/: mcp_servers.json.template  settings.json.template  settings.local.json.template
docs/: agent-architecture-guide.md  agent_creation_guide.md  agent_governance.md  agent_governance_test_schedule.md  agent_operating_model.md  agent_teams.md  artifact_convention.md  claude_md_change_protocol.md  document_consistency.md  handoff_envelope_format.md  mcp_integration.md  outbox_protocol.md  remediation_format.md  restart_protocol.md  sandbox_profiles.md  shared_agent_protocols.md  tools-architecture.md
docs/diagrams/: 01_agent_hierarchy.d2  02_agent_types.d2  03_devops_workflow.d2  04_hexagonal_import_rules.d2  05_workflow_lifecycle.d2  06_worktree_parallelization.d2  07_handoff_envelopes.d2  08_ba_artifacts.d2  09_complete_workflow.d2  10_consultation_patterns.d2  11_drift_handling.d2  12_manifest_structure.d2  13_entry_protocol.d2  14_manifest_sync.d2  15_hexagonal_architecture.d2  16_feature_sliced_design.d2  17_id_sequencing.d2  18_task_evidence.d2
examples/: outbox_task_template.md
examples/outbox_response_schemas/: analysis_tradeoff.yaml  data_gathering_company_list.yaml  research_library_comparison.yaml  validation_fact_check.yaml
hooks/: agent_baseline.py  block_deployment.py  manage_deploy_gate.py  pre-commit-version-track  protect_deploy_gate.py  protect_lost_lamb.py  save_manifest_state.py  startup_check.py  task_completed.py  teammate_idle.py  validate_yaml_output.py  verify_ba_artifacts.py  verify_devops_approval.py  verify_evidence_exists.py  verify_manifest_updated.py  verify_phase_transition.py
knowledge/: coding_standards.md  devlessons.md  operational.md
lenses/: creator_publishing.yaml  fitness_training.yaml  quant_finance.yaml  saas_b2b.yaml
migrations/: MIGRATE_DEV_FOLDERS.md  MIGRATE_PROJECT_ARTIFACTS.md
patterns/: PATTERNS_INDEX.md
patterns/architecture/: devops-portfolio-structure.md  hexagonal-reference.md
patterns/atomic-component/: component.py.template  contract.md.template
patterns/backend-hexagonal/: .importlinter  README.md  hex_audit.py  pyproject.toml
schemas/: agent_prompt.schema.yaml  devops_manifest.schema.yaml  project_manifest.schema.yaml
scripts/: baseline_verify.py  dependency_graph.py  impact_analysis.py  install.sh  migrate_to_claude_folder.sh  new_agent.py  rollback.sh  validate_agents.py  version_tracker.py  worktree_manager.sh
skills/: db-harness.md  fsd-pattern.md  hexagonal-pattern.md  quality-gates.md
templates/: compliance_report_template.md  new_agent_template.md
test-install/: Dockerfile  run.sh
tests/: __init__.py  conftest.py  test_agents.py  test_analysis.py  test_batch_broker.py  test_batch_cli.py  test_batch_ledger.py  test_batch_orchestrator.py  test_cockpit_docs.py  test_cockpit_generator.py  test_cockpit_portfolio.py  test_db.py  test_drift_detector.py  test_lessons.py  test_metrics_collector.py  test_pattern_lint.py  test_project_audit.py  test_versioning.py  test_worktree.py
tools/: registry.yaml
versions/: history.json  manifest.yaml  schema.yaml
(+97 files in other folders)
