# Backend Hexagonal Architecture - Quality Gate Configuration
# Copy to project root and adjust paths as needed

[project]
requires-python = ">=3.11"

# ──────────────────────────────────────────────
# RUFF — Primary linter and formatter
# ──────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "components"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort (import sorting)
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
    "A",       # flake8-builtins
    "C4",      # flake8-comprehensions
    "DTZ",     # flake8-datetimez (no naive datetimes in domain)
    "T20",     # flake8-print (no print statements — use logging)
    "SIM",     # flake8-simplify
    "TCH",     # flake8-type-checking
    "RUF",     # ruff-specific rules
    "ANN",     # flake8-annotations (enforce type hints)
    "ASYNC",   # flake8-async
    "S",       # flake8-bandit (security)
    "PT",      # flake8-pytest-style
    "RET",     # flake8-return
    "ARG",     # flake8-unused-arguments
    "PL",      # pylint rules via ruff
    "PERF",    # perflint
    "LOG",     # flake8-logging
]

ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (typing.Any) — allow in adapters
    "S101",    # assert usage — allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "ARG001"]
"**/conftest.py" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["components", "shared", "app"]
force-sort-within-sections = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true

# ──────────────────────────────────────────────
# MYPY — Static type checking (strict)
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_explicit = false
check_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
allow_untyped_defs = true

# ──────────────────────────────────────────────
# PYTEST
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["components"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Pure domain logic tests (no I/O)",
    "integration: Tests requiring infrastructure (DB, HTTP)",
    "regression: Bug reproduction tests — never delete",
    "slow: Tests taking >5s",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]

# ──────────────────────────────────────────────
# COVERAGE
# ──────────────────────────────────────────────
[tool.coverage.run]
source = ["components"]
omit = [
    "*/tests/*",
    "*/adapters/outbound/memory_*.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "\\.\\.\\.",
]
